[package]
name = "agentkeys-mock-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agentkeys-mock-server"
path = "src/main.rs"

[lib]
name = "agentkeys_mock_server"
path = "src/lib.rs"

[dependencies]
agentkeys-types = { workspace = true }
agentkeys-core = { workspace = true }
agentkeys-protocol = { workspace = true }
# #513 sign-sts chain gate: the SAME on-chain device view layer 2 uses.
agentkeys-worker-creds = { path = "../agentkeys-worker-creds" }
axum = { version = "0.7", features = ["json", "query"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { version = "0.5", features = ["cors"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
hmac = "0.12"
hkdf = "0.12"
sha2 = "0.10"
sha3 = "0.10"
k256 = { version = "0.13", features = ["ecdsa", "sha2"] }
ciborium = "0.2"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
async-trait = { workspace = true }
thiserror = { workspace = true }
jsonwebtoken = "9"
# #512 sign-sts: the signer performs the AssumeRoleWithOIDC exchange itself.
reqwest = { version = "0.12", features = ["json", "blocking"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tokio = { workspace = true }
# Test-only: mint test JWTs against an in-test ES256 keypair so the JWT-auth
# path (`--signer-only` mode) can be exercised hermetically.
p256 = { version = "0.13", features = ["pkcs8", "pem", "ecdsa"] }
rand_core = { version = "0.6", features = ["std"] }
getrandom = "0.2"
