[package]
name = "agentkeys-provisioner"
version = "0.1.0"
edition = "2021"

[dependencies]
agentkeys-types = { workspace = true }
agentkeys-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
