[package]
name = "agentkeys-worker-audit"
version = "0.1.0"
edition = "2021"
description = "Audit-service worker (tier A Merkle relay) — arch.md §15.3"

[[bin]]
name = "agentkeys-worker-audit"
path = "src/main.rs"

[lib]
name = "agentkeys_worker_audit"
path = "src/lib.rs"

[dependencies]
agentkeys-core = { workspace = true }
axum = { version = "0.7", features = ["json"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha3 = "0.10"
hex = "0.4"
ciborium = "0.2"
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
sha3 = "0.10"
