[package]
name = "agentkeys-worker-classify"
version = "0.1.0"
edition = "2021"
description = "Classifier-service worker (#178 §15.6 / #207 items 2-3) — a COMPUTE gate (COMPILE + TAG); no S3 bucket"

[[bin]]
name = "agentkeys-worker-classify"
path = "src/main.rs"

[lib]
name = "agentkeys_worker_classify"
path = "src/lib.rs"

[dependencies]
# Reuse the shared cap-verify chain + error helpers from the credentials
# worker. The classifier is a COMPUTE gate (#178 §15.6): same cap + chain-verify
# (isolation layers 1-2) as the storage workers, but the effect is inference
# (catalog lookup), NOT an S3 touch — so NO aws-config / aws-sdk-s3 / KEK here.
agentkeys-worker-creds = { path = "../agentkeys-worker-creds" }
agentkeys-catalog = { path = "../agentkeys-catalog" }
axum = { version = "0.7", features = ["json"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
tokio = { workspace = true }
