[package]
name = "agentkeys-worker-creds"
version = "0.1.0"
edition = "2021"
description = "Credentials-service worker (arch.md §15.1) — cap verify + AES-256-GCM envelope + S3 PUT/GET"

[[bin]]
name = "agentkeys-worker-creds"
path = "src/main.rs"

[lib]
name = "agentkeys_worker_creds"
path = "src/lib.rs"

[dependencies]
agentkeys-types = { workspace = true }
axum = { version = "0.7", features = ["json"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
base64 = "0.22"
rand_core = { version = "0.6", features = ["std"] }
# AES-256-GCM envelope (per arch.md §15 + §17).
aes-gcm = "0.10"
# P-256 verification of broker cap-sig (matches the signing in
# agentkeys-broker-server/src/handlers/cap.rs).
p256 = { version = "0.13", features = ["pkcs8", "pem", "ecdsa"] }
pkcs8 = { version = "0.10", features = ["pem"] }
# S3 PUT/GET via aws-sdk-s3 — worker uses the IAM role of the Lambda
# / pod it runs as.
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-sdk-s3 = "1"
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
tokio = { workspace = true }
