[package]
name = "agentkeys-worker-email"
version = "0.1.0"
edition = "2021"
description = "Email-service worker — outbound SES send + per-actor inbound stub (arch.md §15.1)"

[[bin]]
name = "agentkeys-worker-email"
path = "src/main.rs"

[lib]
name = "agentkeys_worker_email"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
hex = "0.4"

# AWS SDK for SES (outbound) + S3 (inbound listing).
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-sesv2 = "1"
aws-sdk-s3 = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
